loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__rfc046_computed_properties.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Named {
    fn label(&self) -> String;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct Money {
    pub cents: i64,
}
impl incan_std_core::reflection::HasClassName for Money {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Money {
    fn __class_name__() -> &'static str {
        "Money"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Money {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Money {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("cents"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("cents"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Money {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "cents" => Some(format!("{}", self.cents)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("cents".to_string(), format!("{}", self.cents))]
    }
}
impl Money {
    pub fn dollars(&self) -> i64 {
        return self.cents + 1;
    }
    fn label(&self) -> String {
        return "money".to_string();
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("cents"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("cents"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl Named for Money {
    fn label(&self) -> String {
        return "money".to_string();
    }
}
pub fn property_total(value: Money) -> i64 {
    return value.dollars() + value.cents;
}
