loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__rust_generic_bounds.snap
---
source: tests/codegen_snapshot_tests.rs
expression: generate_rust(source)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::serde::de::DeserializeOwned as Owned;
/// Return a value while retaining its foreign trait obligation in the public signature.
pub fn identity<T: Owned>(value: T) -> T {
    let _ = "Return a value while retaining its foreign trait obligation in the public signature.";
    return value;
}
/// Exercise the same foreign bound on a generic method.
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct Reader {}
impl incan_std_core::reflection::HasClassName for Reader {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Reader {
    fn __class_name__() -> &'static str {
        "Reader"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Reader {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Reader {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 0] = [];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Reader {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Reader {
    /// Retain the bound through a method call and its forwarding call.
    pub fn identity<T: Owned>(&self, value: T) -> T {
        let _ = "Retain the bound through a method call and its forwarding call.";
        return identity(value);
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 0] = [];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = "Require native scalar and collection instantiations to work.";
    let _ = if incan_std_core::strings::str_ne(&identity("demo".to_string()), &"demo") {
        panic!("AssertionError: left != right");
    };
    let _ = if (Reader {}).identity(vec!["linux".to_string(), "macos".to_string()])
        != vec!["linux".to_string(), "macos".to_string()]
    {
        panic!("AssertionError: left != right");
    };
    let _ = println!("{}", "foreign generic bounds passed");
}
