loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__rust_supertrait_imported.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
/// A value whose label is its Rust `Display` rendering.
pub trait Labeled: ::std::fmt::Display {
    fn label(&self) -> String;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Tag {
    name: String,
}
impl incan_std_core::reflection::HasClassName for Tag {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Tag {
    fn __class_name__() -> &'static str {
        "Tag"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Tag {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Tag {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("name"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Tag {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "name" => Some(format!("{}", self.name)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("name".to_string(), format!("{}", self.name))]
    }
}
impl Tag {
    pub fn __str__(&self) -> String {
        return self.name.clone();
    }
}
impl Tag {
    #[inline(never)]
    pub fn __str__(&self) -> String {
        self.__str__()
    }
}
impl std::fmt::Display for Tag {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.__str__())
    }
}
impl Labeled for Tag {
    fn label(&self) -> String {
        return {
            let __parts: [&str; 2usize] = ["", ""];
            let __args: Vec<String> = vec![format!("{}", self)];
            incan_std_core::strings::fstring(&__parts, &__args)
        };
    }
}
impl Tag {
    #[inline(never)]
    pub fn label(&self) -> String {
        <Self as Labeled>::label(self)
    }
}
fn describe<T: Labeled>(value: T) -> String {
    return value.label();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", describe(Tag { name : "release".to_string() }));
}
