loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__rust_trait_import_without_metadata.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::std::borrow::Borrow;
use ::std::path::PathBuf;
pub fn borrowed(value: &PathBuf) -> &PathBuf {
    return value.borrow();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = ();
}
