loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__std_async_task_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::r#async;
use ::incan_std_async::task::JoinHandle;
use ::incan_std_async::task::RuntimeFuture;
use ::incan_std_async::task::RuntimeFnOnce;
use ::incan_std_async::task::spawn as rust_spawn;
use ::incan_std_async::task::spawn_blocking as rust_spawn_blocking;
use ::incan_std_async::task::yield_now as rust_yield_now;
/// Spawn async work onto the runtime.
///
/// The generic output type `T` is constrained to `Send + Static` so this wrapper stays aligned with the host runtime's
/// task-safety requirements.
///
/// The returned task is durable once spawned. Dropping the `JoinHandle[T]` detaches the task and loses the result; call
/// `abort()` on the handle when cancellation is required.
pub fn spawn<T: Send + 'static, TaskFuture: RuntimeFuture<T>>(
    task: TaskFuture,
) -> JoinHandle<T> {
    let _ = "\n    Spawn async work onto the runtime.\n\n    The generic output type `T` is constrained to `Send + Static` so this wrapper stays aligned with the host runtime's\n    task-safety requirements.\n\n    The returned task is durable once spawned. Dropping the `JoinHandle[T]` detaches the task and loses the result; call\n    `abort()` on the handle when cancellation is required.\n    ";
    return rust_spawn(task);
}
/// Spawn blocking work onto the runtime's blocking pool.
///
/// Like `spawn()`, this wrapper carries explicit `Send + Static` bounds so stdlib authors can express the host runtime
/// capability requirements directly in Incan source.
///
/// Blocking work is durable once it starts running. Dropping the handle detaches it and loses the result; `abort()` only
/// has a chance to stop the work if the blocking task is still queued and has not started.
pub fn spawn_blocking<T: Send + 'static, TaskFn: RuntimeFnOnce<T>>(
    task: TaskFn,
) -> JoinHandle<T> {
    let _ = "\n    Spawn blocking work onto the runtime's blocking pool.\n\n    Like `spawn()`, this wrapper carries explicit `Send + Static` bounds so stdlib authors can express the host runtime\n    capability requirements directly in Incan source.\n\n    Blocking work is durable once it starts running. Dropping the handle detaches it and loses the result; `abort()` only\n    has a chance to stop the work if the blocking task is still queued and has not started.\n    ";
    return rust_spawn_blocking(task);
}
/// Yield execution back to the scheduler.
///
/// This is useful in long-running async loops when you want to remain cooperative without sleeping for a real duration.
///
/// Example:
///     while work_left():
///         step()
///         await yield_now()
pub async fn yield_now() {
    let _ = "\n    Yield execution back to the scheduler.\n\n    This is useful in long-running async loops when you want to remain cooperative without sleeping for a real duration.\n\n    Example:\n        while work_left():\n            step()\n            await yield_now()\n    ";
    let _ = rust_yield_now().await;
}
